--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
                     
         <div class="col-3 text-center">
-                <img class="icone_custom" src="./icon1.png" alt="">
+                <img id="iconTenda" class="icone_custom" src="./icon1.png" alt="">
                 <p>Lorem ipsum<p>
                 <div class="line"></div>               
         </div>
